gitops/apps/vault/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
