gitops/apps/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.cledyu.local
      secretName: vault-tls
  rules:
    - host: vault.cledyu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-active
                port:
                  number: 8200
